Commit on Dec/10/2020

--- a/storytelling.css
+++ b/storytelling.css
@@ -1,9 +1,9 @@
 /* -------------------------------------------------------------- */
 /*
 
-	crowdsourcing.css
+	storytelling.css
 
-						Nov/23/2017
+						Dec/10/2020
 
 */
 /* -------------------------------------------------------------- */
